cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__queue_command@stdout-Queue { command: Add { target: Album, id: "01J1K5B6RJ84WJXCWYJ5WNE12E" } }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
album added to queue
