cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__rand_command@stdout-Rand { target: Artist }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    Artist {
        id: Thing {
            tb: "artist",
            id: String(
                "01J1K5B6RJ84WJXCWYJ5WNE12E",
            ),
        },
        name: "Test Artist",
        runtime: 180s,
        album_count: 1,
        song_count: 1,
    },
)
