cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__status_command@stdout-Status { command: Recluster }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
there is not a reclustering in progress
